fix: change letter-spacing in log-footer

--- a/css/basic/footer.css
+++ b/css/basic/footer.css
@@ -134,3 +134,7 @@ footer{
     justify-content: center;
     background-color: #E7F5F8;
 }
+
+.footer-log > p{
+    letter-spacing: 0.1px;
+}
